--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,14 +12,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.0.11",
+    "@angular/cdk": "^10.2.1",
     "@angular/common": "~10.0.11",
     "@angular/compiler": "~10.0.11",
     "@angular/core": "~10.0.11",
     "@angular/forms": "~10.0.11",
+    "@angular/material": "^10.2.1",
     "@angular/platform-browser": "~10.0.11",
     "@angular/platform-browser-dynamic": "~10.0.11",
     "@angular/router": "~10.0.11",
     "rxjs": "~6.5.5",
+    "socket.io-client": "^2.3.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
